--- a/src/Practice2.html
+++ b/src/Practice2.html
@@ -1,21 +1,35 @@
 <html>
 <head>
-    <style type="text/css">
-        #flying-box {
-            width: 50px;
-            height: 50px;
-            background: red;
-            position: absolute;
+    <title>Title</title>
+    <script>
+        function createBlockWithValue () {
+            var inputText = document.getElementById('value').value;
+            var el = document.getElementById('demo');
+
+            var onClickEl = document.createElement('div');
+            onClickEl.innerHTML = inputText;
+            onClickEl.style.height = '60px';
+            onClickEl.style.cursor = 'pointer';
+            onClickEl.style.width = '250px';
+            onClickEl.style.borderStyle = 'double';
+            onClickEl.style.display = 'inline-block';
+            onClickEl.style.overflow = 'scroll';
+            onClickEl.addEventListener('click', removing);
+            el.appendChild(onClickEl);
         }
-    </style>
-    <script type="text/javascript">
-        function some (event) {
-            event.currentTarget.style.left = (event.x + 10) + 'px';
-            event.currentTarget.style.top = (event.y + 10) + 'px';
+
+        function removing (e) {
+            var el = document.getElementById('demo');
+            //you can use this to remove current el or e.currentTarget
+            el.removeChild(e.currentTarget);
         }
     </script>
 </head>
 <body>
-<div id="flying-box" onmouseover="some(event)"></div>
+    <div>
+        <input id="value" type="text" value="input some text here">
+        <input type="submit" onclick="createBlockWithValue()">
+    </div>
+    <div id="demo"></div>
 </body>
 </html>
